voting-app/redis-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
  labels:
     app: demo-voting-app
spec:
  selector:
    matchLabels:
      app: demo-voting-app
      name: redis-pod
  replicas: 1
  template:
    metadata:
      name: redis-pod
      labels:
        name: redis-pod
        app: demo-voting-app
    spec:
      containers:
      - name: redis
        image: redis
        ports:
        - containerPort: 6379
