voting-app/result-app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: result-app-deployment
  labels:
     app: demo-result-app
spec:
  selector:
    matchLabels:
      app: demo-result-app
      name: result-app-pod
  replicas: 1
  template:
    metadata:
      name: result-app-pod
      labels:
        name: result-app-pod
        app: demo-result-app
    spec:
      containers:
      - name: result-app
        image: dockersamples/examplevotingapp_result
        ports:
        - containerPort: 80
