voting-app/voting-app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: voting-app-deployment
  labels:
     app: demo-voting-app
spec:
  selector:
    matchLabels:
      app: demo-voting-app
      name: voting-app-pod
  replicas: 1
  template:
    metadata:
      name: voting-app-pod
      labels:
        name: voting-app-pod
        app: demo-voting-app
    spec:
      containers:
      - name: voting-app
        image: dockersamples/examplevotingapp_vote
        ports:
        - containerPort: 80
