voting-app/worker-app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-app-deployment
  labels:
     app: demo-voting-app
spec:
  selector:
    matchLabels:
      app: demo-voting-app
      name: worker-app-pod
  replicas: 1
  template:
    metadata:
      name: worker-app-pod
      labels:
        name: worker-app-pod
        app: demo-voting-app
    spec:
      containers:
      - name: worker-app
        image: dockersamples/examplevotingapp_worker
